<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Space Quiz</string>

    <string name="space_quiz">Space Quiz</string>

    <string name="question_one">1. What man-made object is the furthest from Earth?"</string>
    <string name="q1_answer_a">A. Pioneer 5</string>
    <string name="q1_answer_b">B. Cassini</string>
    <string name="q1_answer_c">C. Voyager 1</string>
    <string name="q1_answer_d">D. New Horizons</string>

    <string name="question_two">2. Who was the first man to step on the moon?</string>
    <string name="answer_here">Answer here.</string>

    <string name="question_three">3. Which of the following probes were sent to Mars?</string>
    <string name="q3_answer_a">A. Mariner 4</string>
    <string name="q3_answer_b">B. Cassini</string>
    <string name="q3_answer_c">C. Pioneer 10</string>
    <string name="q3_answer_d">D. Viking 2</string>

    <string name="question_four">4. The New Horizons space probe came within 7,800 miles of Pluto on its flyby. </string>
    <string name="q4_answer_a">A. True</string>
    <string name="q4_answer_b">B. False</string>

    <string name="submit_answers">Submit Answers</string>

    <string name="question_one_correct">1: Correct</string>
    <string name="question_one_incorrect">1. Incorrect</string>

    <string name="question_two_correct">2: Correct</string>
    <string name="question_two_incorrect">2. Incorrect</string>

    <string name="question_three_correct">3: Correct</string>
    <string name="question_three_incorrect">3. Incorrect</string>

    <string name="question_four_correct">4: Correct</string>
    <string name="question_four_incorrect">4. Incorrect</string>

    <string name="toast_score">Score: <xliff:g id="scoreString">%s</xliff:g></string>
    <string name="toast_congrats">Congratulations! Perfect Score!</string>

    <string name="earth_content_description">An image of the Earth at distance.</string>
    <string name="moon_content_description">An image of a footprint on the Moon.</string>
    <string name="mars_content_description">An image of the Martian terrain taken on Mars by a probe.</string>
    <string name="pluto_content_description">A close up image of Pluto\'s terrain.</string>

</resources>
