<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.android.spacequiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/space_quiz"
            android:textAppearance="@style/Title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Question"
                android:text="@string/question_one"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/question_one"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/q1_option_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q1_answer_a"/>
                    <RadioButton
                        android:id="@+id/q1_option_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q1_answer_b"/>
                    <RadioButton
                        android:id="@+id/q1_option_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q1_answer_c"/>
                    <RadioButton
                        android:id="@+id/q1_option_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q1_answer_d"/>
                </RadioGroup>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="96dp"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/earth"
                    android:tag="https://images.nasa.gov/details-PIA01967.html"
                    android:onClick="openBrowser"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Question"
                android:text="@string/question_two"/>
            <EditText
                android:id="@+id/q2_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/white"
                android:textAppearance="@style/EditAnswer"
                android:hint="@string/answer_here"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="256dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:scaleType="centerInside"
                android:tag="https://images.nasa.gov/details-6901250.html"
                android:onClick="openBrowser"
                android:src="@drawable/moon_footprint"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Question"
                android:text="@string/question_three"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/q3_option_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q3_answer_a">
                    </CheckBox>
                    <CheckBox
                        android:id="@+id/q3_option_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q3_answer_b">
                    </CheckBox>
                    <CheckBox
                        android:id="@+id/q3_option_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q3_answer_c">
                    </CheckBox>
                    <CheckBox
                        android:id="@+id/q3_option_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q3_answer_d">
                    </CheckBox>
                </LinearLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="96dp"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"
                    android:tag="https://images.nasa.gov/details-PIA00568.html"
                    android:onClick="openBrowser"
                    android:src="@drawable/mars"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Question"
                android:text="@string/question_four"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/question_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <RadioButton
                        android:id="@+id/q4_option_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q4_answer_a"/>
                    <RadioButton
                        android:id="@+id/q4_option_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AnswerRadioButton"
                        android:text="@string/q4_answer_b"/>
                </RadioGroup>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="96dp"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"
                    android:tag="https://images.nasa.gov/details-PIA20198.html"
                    android:onClick="openBrowser"
                    android:src="@drawable/pluto"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/submit_answers"
            android:onClick="submitAnswers"/>

    </LinearLayout>
</ScrollView>